force-app/main/default/objects/professional__c/professional__c.object-meta.xml
<CustomObject>
    <label>professional</label>
    <nameField>
        <label>professionals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>professionals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>