force-app/main/default/objects/professional__c/fields/I__c.field-meta.xml
<CustomField>
    <fullName>I__c</fullName>
    <formula>IMAGE(Image_URL__c,  Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>