force-app/main/default/objects/professional__c/fields/schedules__c.field-meta.xml
<CustomField>
    <fullName>schedules__c</fullName>
    <label>Schedules</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Am</fullName>
                <default>true</default>
                <label>Am</label>
            </value>
            <value>
                <fullName>Pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>