force-app/main/default/objects/professional__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Terapia de pareja</fullName>
            </value>
            <value>
                <fullName>Terapia individual</fullName>
            </value>
            <value>
                <fullName>Terapia familiar</fullName>
            </value>
            <value>
                <fullName>Terapia infanto-juvenil</fullName>
            </value>
            <value>
                <fullName>Mediación familiar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>